# squeakyv

./: README.md  Sdflow.yaml  shell.nix
generators/: create-database.py  create-operations-yesql.py  database.schema.jsonnet  render-sqlite-queries.py
generators/languages/: bash.py  elisp.py  go.py  python.py
schemas/: database.autogen.schema.json
sql/: create-database.autogen.sql  database-operations.autogen.yesql.sql
targets/bash/: README.md  demo.sh  squeakyv.sh  test_squeakyv.sh
targets/elisp/: README.md  squeakyv-test.el  squeakyv.el
targets/go/: README.md  go.mod  operations.go  squeakyv.go  squeakyv_test.go
targets/python/: LICENSE  README.md  pyproject.toml  squeakyv.py
targets/python/squeakyv/: __init__.py  _operations.py  core.py
