[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "squeakyv"
version = "0.1.0"
description = "Simple SQLite-backed key-value caching library"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "squeakyv contributors"}
]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
keywords = ["cache", "sqlite", "key-value", "storage", "memoization"]

[project.urls]
Homepage = "https://github.com/yourusername/squeakyv"
Repository = "https://github.com/yourusername/squeakyv"
Issues = "https://github.com/yourusername/squeakyv/issues"

[tool.setuptools]
packages = ["squeakyv"]
